# TomSeg

./: CMakeLists.txt  README.md  TomSeg.pro  cliapplication.cpp  cliapplication.h  histogramview.cpp  histogramview.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqgraphicsscene.cpp  myqgraphicsscene.h  point.h  region.h  seed.cpp  seed.h  seedinfo.cpp  seedinfo.h  segmenterthread.cpp  segmenterthread.h  sliceinfo.cpp  sliceinfo.h
segmentation-manager/: CMakeLists.txt  exporter.cpp  exporter.h  importer.cpp  importer.h  point.cpp  point.h  region.h  seed.cpp  seed.h  seedpropagater.cpp  seedpropagater.h  segmentationmanager.cpp  segmentationmanager.h  slice.cpp  slice.h
segmentation-manager/differentiators/: differentiator.cpp  differentiator.h
segmentation-manager/preprocessors/: aligner.cpp  aligner.h
segmentation-manager/segmentors/: cuda-kernels.cu  otsu-threshold.cpp  otsu-threshold.h  proportional-region-growing.cpp  proportional-region-growing.h  segmenter.h
segmentors/: CMakeLists.txt  grided-region-growing.cpp  grided-region-growing.h  pixel-by-pixel.cpp  pixel-by-pixel.h  proportional-pixel-by-pixel.cpp  proportional-pixel-by-pixel.h  proportional-region-growing.cpp  proportional-region-growing.h  region-growing.cpp  region-growing.h
